happy with nav bar now to fix spacing of links at bottom or to get rid of all together and make them a part of the side nav

--- a/personalsite.css
+++ b/personalsite.css
@@ -23,3 +23,31 @@ h4 {
 	text-align: center;
 		margin: 10px 0px;
 }
+/*li {
+	float: left;
+}*/
+
+li a, .dropbtn {
+	display: inline-block;
+	padding: 14px 16px;
+	color: white;
+}
+li.dropdown {
+	display: inline-block;
+}
+.dropdown-content {
+	display: none;
+	position: absolute;
+	min-width: 160px;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    background-color: #333;
+}
+.dropdown-content a {
+	padding: 12px 16px;
+	display: block
+	text-align: left;
+}
+.dropdown:hover .dropdown-content {
+	display: block;
+}
